<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/RelativeLayout01"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/StatsLinearLayout"
		android:layout_width="match_parent"
		android:layout_marginLeft="3sp">
		<TextView
		    android:id="@+id/TextRecordStats"
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/zero_points_collected"/>
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginTop="5sp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:text="@string/distance"
				android:textSize="26sp"/>
			<TextView
				android:layout_height="wrap_content"
				android:id="@+id/TextDistance"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:text="@string/zero"
				android:layout_alignParentRight="true"
				android:layout_marginRight="5sp"
				android:textSize="26sp"/>
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginTop="5sp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/time_elapsed"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:textSize="26sp"/>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/TextDuration"
				android:textStyle="bold"
				android:layout_alignParentRight="true"
				android:text="@string/zero_time"
				android:layout_marginRight="5sp"
				android:textSize="26sp"/>
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginTop="5sp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/current_speed"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:textSize="26sp"/>
			<TextView
				android:layout_height="wrap_content"
				android:id="@+id/TextSpeed"
				android:textStyle="bold"
				android:layout_alignParentRight="true"
				android:text="@string/zero_mph"
				android:layout_width="wrap_content"
				android:layout_marginRight="5sp"
				android:textSize="26sp"/>
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginTop="5sp">
			<TextView
				android:layout_height="wrap_content"
				android:text="@string/max_speed"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:textSize="26sp"/>
			<TextView
			    android:id="@+id/TextMaxSpeed"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:layout_alignParentRight="true"
				android:text="@string/zero_mph"
				android:layout_width="wrap_content"
				android:layout_marginRight="5sp"
				android:textSize="26sp"/>
		</RelativeLayout>	
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginTop="5sp">
			<TextView
				android:layout_height="wrap_content"
				android:text="@string/average_speed"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:textSize="26sp"/>
			<TextView
			    android:id="@+id/TextAvgSpeed"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:layout_alignParentRight="true"
				android:text="@string/zero_mph"
				android:layout_width="wrap_content"
				android:layout_marginRight="5sp"
				android:textSize="26sp"/>
		</RelativeLayout>	
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/BottomButtons"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true">
		<Button
			android:id="@+id/ButtonPause"
			android:text="@string/pauseButtonLabel" 
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:drawableLeft="@android:drawable/ic_media_pause"
			android:textStyle="bold"
			android:textSize="18sp"/>
		<Button
			android:id="@+id/ButtonFinished"
			android:text="@string/finishedButtonLabel"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:layout_weight="1"
			android:drawableLeft="@android:drawable/ic_media_next"
			android:textStyle="bold"
			android:textSize="18sp"/>
	</LinearLayout>
</RelativeLayout>
