<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/BaseContainer">
	<android.support.v4.widget.DrawerLayout
		android:id="@+id/drawer_layout"
		style="@style/ContentContainer">
		<FrameLayout
			android:id="@+id/content_frame"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>
		
		<FrameLayout
			android:id="@+id/menu_frame"
			android:layout_width="250dp"
			android:layout_height="match_parent"
			android:layout_gravity="start">
			
			<LinearLayout
				style="@style/ContentContainer"
				android:orientation="vertical">
				<!-- android:paddingLeft="@dimen/small_padding" -->
				
				<Button
					android:id="@+id/menu_record"
					android:text="@string/record"
					android:drawableLeft="@drawable/menu_record"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="@dimen/menu_item_height"
					android:gravity="left|center_vertical"
					android:fontFamily="@string/menu_font_unselected"
					android:textSize="@dimen/menu_font_size"
					android:drawablePadding="@dimen/small_padding"/>
				
				<Button
					android:id="@+id/menu_trips"
					android:text="@string/trips"
					android:drawableLeft="@drawable/menu_trips"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="@dimen/menu_item_height"
					android:gravity="left|center_vertical"
					android:fontFamily="@string/menu_font_unselected"
					android:textSize="@dimen/menu_font_size"
					android:drawablePadding="@dimen/small_padding"/>
				
				<Button
					android:id="@+id/menu_marks"
					android:text="@string/marks"
					android:drawableLeft="@drawable/menu_marks"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="@dimen/menu_item_height"
					android:gravity="left|center_vertical"
					android:fontFamily="@string/menu_font_unselected"
					android:textSize="@dimen/menu_font_size"
					android:drawablePadding="@dimen/small_padding"/>
				
				<Button
					android:id="@+id/menu_settings"
					android:text="@string/settings"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="@dimen/menu_item_height"
					android:drawableLeft="@drawable/menu_settings"
					android:gravity="left|center_vertical"
					android:fontFamily="@string/menu_font_unselected"
					android:textSize="@dimen/menu_font_size_small"
					android:drawablePadding="@dimen/small_padding"/>
				
				<Button
					android:id="@+id/menu_help"
					android:text="@string/help"
					android:drawableLeft="@drawable/menu_help"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="@dimen/menu_item_height"
					android:gravity="left|center_vertical"
					android:fontFamily="@string/menu_font_unselected"
					android:textSize="@dimen/menu_font_size_small"
					android:drawablePadding="@dimen/small_padding"/>
			</LinearLayout>
		</FrameLayout>
	</android.support.v4.widget.DrawerLayout>
</FrameLayout>