<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/BaseContainer">
	<RelativeLayout
	    style="@style/ContentContainer">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:layout_above="@+id/save_buttons"
	        android:orientation="vertical"
	        android:padding="@dimen/standard_padding">
				 
	        <LinearLayout
	            style="@style/user_pref_group">
	            
	            <TextView
	                style="@style/user_prefs_label"
	                android:text="@string/select_mark_type"/>
	            <Spinner
	                android:id="@+id/mark_type"
	                style="@style/user_prefs_spinner"
	                android:entries="@array/ageArray"/>
	        </LinearLayout>
	        
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/mark_purpose_description"
				android:text="@string/marks_0_desc"
				android:bufferType="spannable"
				android:textSize="14sp"
				android:lines="4"/>
				 
		   	<LinearLayout
		   	    android:layout_width="match_parent"
		   	    android:layout_height="0dp"
		   	    android:layout_weight="1">
		   	    <LinearLayout
			   	    android:layout_width="0dp"
			   	    android:layout_height="match_parent"
			   	    android:layout_weight="1">
					<ImageButton
					    android:id="@+id/take_photo"
					    style="?android:attr/buttonBarButtonStyle"
			   	   		android:layout_height="match_parent"
			   	    	android:layout_width="match_parent"
			   	    	android:src="@drawable/ic_action_camera"
			   	    	android:background="@drawable/bordered"/>
				</LinearLayout>
				<View android:layout_width="@dimen/standard_padding"
				    android:layout_height="match_parent"/>
				<RelativeLayout
			   	    android:layout_width="0dp"
			   	    android:layout_height="match_parent"
			   	    android:layout_weight="1"
			   	    android:orientation="vertical">
					
				    <TextView
				        android:id="@+id/additional_details"
	                	style="@style/user_prefs_label"
	                	android:layout_width="match_parent"
	                	android:text="@string/additional_details"/>

					<EditText
					    android:id="@+id/mark_note_input"
					    android:layout_below="@+id/additional_details"
					    android:layout_width="match_parent"
					    android:layout_height="fill_parent"
					    android:gravity="top|left"
					    android:imeOptions="actionDone"/>
				    
				</RelativeLayout>
		   	</LinearLayout>
	   	</LinearLayout>
	   	
		<LinearLayout
			android:id="@+id/save_buttons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="vertical">
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
		    <LinearLayout
		        style="?android:attr/buttonBarStyle"
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
				    android:id="@+id/ButtonDiscard"
				    style="?android:attr/buttonBarButtonStyle"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:text="@string/discard"
					android:drawableLeft="@drawable/ic_dark_action_remove"/>
				<Button
					android:id="@+id/ButtonSubmit"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:text="@string/submit"
					android:drawableLeft="@drawable/ic_dark_action_save"/>
			</LinearLayout>
		</LinearLayout>
	</RelativeLayout>
</FrameLayout>